--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>MIND CRAFT</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us</title>
+  <style>
+    :root {
+      --bg: #ffffff;
+      --fg: #111111;
+      --muted: #5b5f66;
+      --border: #eaeaea;
+      --maxw: 1100px;
+      --lh: 1.9;
+    }
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; background: var(--bg); color: var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; line-height: var(--lh); }
+    a { color: var(--fg); text-decoration: none; }
+    img { max-width: 100%; display: block; }
+    .container { max-width: var(--maxw); margin: 0 auto; padding: 0 20px; }
+    .section { padding: 72px 0; }
+    h1, h2, h3 { letter-spacing: 0.2px; margin: 0 0 14px; }
+    h1 { font-size: clamp(2rem, 3.2vw + 1rem, 3rem); font-weight: 700; text-align:center; }
+    h2 { font-size: clamp(1.6rem, 2.2vw + 1rem, 2.2rem); font-weight: 700; }
+    h3 { font-size: 1.1rem; font-weight: 700; margin-top: 18px; }
+    .lead { font-size: 1.075rem; }
+    .muted { color: var(--muted); }
+    .band { background: #fafafa; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); }
+    .center { text-align: center; }
+    .intro { max-width: 800px; margin: 0 auto; text-align: center; }
+    .intro p { margin-bottom: 1.2em; }
+    .fullwidth-img { width: 100%; height: auto; display: block; }
+    @media (min-width: 860px) {
+      .grid-2 { display: grid; grid-template-columns: 1.05fr 1fr; gap: 36px; align-items: center; }
+    }
+  </style>
 <body>
      <!-- 遮罩层 -->
 
@@ -30,12 +64,29 @@
         </div>
     </section>
 
-    <!-- 主界面和 12 宫格之间的横条部分 -->
-<section class="banner">
-    <div class="banner-content"> 
-        <p class="banner-text">CHANTING WITH HEART, CRAFTED FOR PEACE</p>
+
+  <!-- Fullwidth hero image -->
+  <section>
+    <img src="imagelong1.jpeg" alt="Hero image" class="fullwidth-img" />
+  </section>
+
+  <!-- Intro text -->
+  <section class="section">
+    <div class="intro">
+      <h1>WHO ARE WE?</h1>
+      <p>Our team is composed of graduates in Buddhist Studies, specializing in the symbolism, history, and craftsmanship of prayer beads. With deep academic knowledge, we understand the diversity of bead traditions across different Buddhist schools and lineages, and we approach every design with respect and cultural sensitivity.</p>
+      <p>For over a decade, we have served temples, organizations, and practitioners in more than ten countries. Beyond Buddhist communities, our beads are also cherished in meditation and yoga practices, offering meaningful tools for focus, mindfulness, and spiritual well-being.</p>
+      <p>We are committed to sustainability: many of our products are crafted from eco-friendly, responsibly sourced, and natural materials. Combined with customization — from carefully chosen textures to organizational icons and unique designs — each piece reflects authenticity, respect, and care for the environment.</p>
+      <p>Choosing us means working with a team that unites scholarly knowledge, meticulous craftsmanship, and a dedication to both tradition and sustainability.</p>
+      <p><em>Rooted in tradition, crafted with respect, sustained by nature.</em></p>
     </div>
-</section>
+  </section>
+
+  <!-- Second fullwidth image -->
+  <section>
+    <img src="imagelong2.jpeg" alt="Second fullwidth image" class="fullwidth-img" />
+  </section>
+
 
 <!-- 12 宫格部分 -->
 <div class="product-grid">
