--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
   <section class="section">
     <div class="intro">
       <h1>WHO ARE WE?</h1>
-      <p>Our team is composed of graduates in Buddhist Studies, specializing in the symbolism, history, and craftsmanship of prayer beads. With deep academic knowledge, we understand the diversity of bead traditions across different Buddhist schools and lineages, and we approach every design with respect and cultural sensitivity.</p>
-      <p>For over a decade, we have served temples, organizations, and practitioners in more than ten countries. Beyond Buddhist communities, our beads are also cherished in meditation and yoga practices, offering meaningful tools for focus, mindfulness, and spiritual well-being.</p>
-      <p>We are committed to sustainability: many of our products are crafted from eco-friendly, responsibly sourced, and natural materials. Combined with customization — from carefully chosen textures to organizational icons and unique designs — each piece reflects authenticity, respect, and care for the environment.</p>
-      <p>Choosing us means working with a team that unites scholarly knowledge, meticulous craftsmanship, and a dedication to both tradition and sustainability.</p>
-      <p><em>Rooted in tradition, crafted with respect, sustained by nature.</em></p>
+      <p>Our team is composed of graduates in Buddhist Studies, specializing in the history, symbolism, and craftsmanship of Buddhist practice items. While prayer beads remain our main focus, we also create meditation cushions and other supportive tools for practice.</p>
+      <p>With more than a decade of experience serving Buddhist communities worldwide, we understand the diversity of traditions across different schools and lineages — and we approach every project with respect for authentic transmission. At the same time, we are attuned to the needs of modern lay practitioners and meditation communities, where quality, accessibility, and authenticity must come together.</p>
+      <p>We are committed to sustainability: many of our products are made from eco-friendly and responsibly sourced materials. We also provide full customization — from carefully chosen materials to organizational icons and unique designs — ensuring each piece is both authentic and tailored to the needs of your community.</p>
+      <p><em>Choosing us means working with a team that unites scholarly knowledge, careful craftsmanship, and a modern understanding of how Buddhist practice is lived today.</em></p>
     </div>
   </section>
 
